# mai-ml-project

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  aggregation.py  classification_metrics.txt  config.py  docker-compose.yml  globals.py  kirill.py  main.py  model_env.py  pyproject.toml  regression_metrics.txt  test.py
.github/workflows/: ml_pipeline.yml
data/: .gitignore
metrics/: classification_metrics.txt  regression_metrics.txt
ml/: prediction.py
ml/db/: db.py
ml/models/: prediction_models.py
ml/server/: predict_router.py
ml/service/: aggregation.py  model_train.py  prediction.py
ml/trained_model/: classification.cbm  regression.cbm
