[tool.poetry]
name = "mai-ml-project"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
catboost = "^1.2.7"
scikit-learn = "1.5.2"
fastapi = "^0.115.6"
uvicorn = "^0.32.1"
python-dotenv = "^1.0.1"
databases = "^0.9.0"
asyncpg = "^0.30.0"
optuna = "^4.1.0"
category-encoders = "2.6.4"
boruta = "^0.4.3"
feature-engine = "^1.8.2"
mlxtend = "^0.23.3"


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
